== In Git

=== New Features

=== Bugfixes

== 1.1 (16.05.2010)

=== New Features
* switch between installed ruby implementations
* use the default rvm ruby as default ruby within emacs
* rvm.el can now detect the right version to use for the current buffer (takes .rvmrc into account)
* support for Gemsets
* add Gemsets /bin directories to PATH

=== Bugfixes
* Fixed setting of gemset path and ruby path